# katarynka-song-details

./: Dockerfile  manage.py  pyproject.toml
details/: models.py  views.py
song_details/: asgi.py  settings.py  urls.py
src/details/: admin.py  main.py  models.py  urls.py  views.py
src/details/migrations/: 0001_initial.py
src/song_details/: settings.py  wsgi.py
