[tool.poetry]
name = "song-details"
version = "0.1.0"
description = ""
authors = ["b-kuch <58431879+b-kuch@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "song_details"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
