[tool.poetry]
name = "song-details"
version = "0.1.0"
description = ""
authors = ["b-kuch <58431879+b-kuch@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "song_details", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
djangorestframework = "^3.14.0"
Django = "^4.1.3"
pymongo = "3.12.3"
djongo = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
